Remove News pages from a website in a favor of GitHub Releases page

--- a/site/_includes/default.html
+++ b/site/_includes/default.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <link rel="icon" type="image/png" href="/favicon.png" />
-  <link rel="alternate" href="/feed.atom" type="application/atom+xml"/>
+  <link rel="alternate" href="https://github.com/andy128k/password-storage/releases" type="application/atom+xml"/>
   <link rel="stylesheet" href="/css/style.css" />
   <title>PasswordStorage</title>
 </head>
@@ -21,7 +21,6 @@
   <div id="sidebar">
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/news/">News</a></li>
       <li><a href="/screenshots/">Screenshots</a></li>
       <li><a href="https://github.com/andy128k/password-storage/releases">Downloads</a></li>
       <li><a href="https://github.com/andy128k/password-storage">GitHub page</a></li>
