--- a/src/css/application.css
+++ b/src/css/application.css
@@ -1,3 +1,11 @@
 label.bold {
   font-weight: bold;
 }
+
+treeexpander.huge-tree-indent indent {
+  min-width: 16pt;
+}
+
+treeexpander.huge-tree-indent expander {
+  min-width: 16pt;
+}
